# mewa

./: .deepsource.toml  Doxyfile  LICENSE  README.md  _r_e_a_d_m_e_8md.html  annotated.html  annotated_dup.js  class_down_arrow_svg-members.html  class_down_arrow_svg.html  class_down_arrow_svg.js  class_down_arrow_svg__coll__graph.map  class_down_arrow_svg__coll__graph.md5  class_gpu_buffer-members.html  class_gpu_buffer.html  class_gpu_buffer.js  class_gpu_buffer__coll__graph.md5  class_gpu_buffer__inherit__graph.map  class_gpu_vbo-members.html  class_gpu_vbo.html  class_gpu_vbo.js  class_gpu_vbo__inherit__graph.map  class_gpu_vbo__inherit__graph.md5  class_heart_svg-members.html  class_heart_svg.html  class_heart_svg.js  class_heart_svg__coll__graph.map  class_heart_svg__coll__graph.md5  class_heart_svg__inherit__graph.map  class_heart_svg__inherit__graph.md5  class_mx_abstract_atlas-members.html  class_mx_abstract_atlas.html  class_mx_abstract_atlas.js  class_mx_abstract_atlas__coll__graph.map  class_mx_abstract_atlas__coll__graph.md5  class_mx_abstract_atlas__inherit__graph.map  class_mx_abstract_atlas__inherit__graph.md5  class_mx_abstract_svg-members.html  class_mx_abstract_svg.html  class_mx_abstract_svg.js  class_mx_abstract_svg__inherit__graph.map  (+1973 more)
.github/: FUNDING.yml
.github/workflows/: main.yml
doc/: framework-development.md
doc/doxygen-custom/: header.html
examples/canvaswidget/: CMakeLists.txt  canvaswidget.cpp  canvaswidget.h  canvaswidget.pro  main.cpp  (+1 more)
html/: graph_legend.html  navtreedata.js
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+119 more)
src/: mewa.cmake  qtmewa.pri  src.pri
src/renderer/direct12/iconprogram/test_randomtexture/: BasicPixelShader.hlsl  BasicType.hlsli  BasicVertexShader.hlsl  CMakeLists.txt  main.cpp  randomtextureapp.cpp  randomtextureapp.h  testshaderprogram.cpp  testshaderprogram.h
src/renderer/direct12/vectorprogram/test_triangle/: CMakeLists.txt  VectorPixelShader.hlsl  main.cpp  triangleapp.cpp  triangleapp.h
(+267 files in other folders)
